# netflow

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  netflow.example.toml  netflow.toml  pr-body.md
.cargo/: config.toml
.github/workflows/: ci.yml
netflow/: Cargo.toml  build.rs
netflow-common/: Cargo.toml
netflow-common/src/: lib.rs
netflow-ebpf/: Cargo.toml
netflow-ebpf/src/: main.rs
netflow/src/: config.rs  ebpf_loader.rs  flow_table.rs  iterator_poll.rs  lib.rs  main.rs  ringbuf_poll.rs
netflow/src/api/: flows.rs  metrics.rs  mod.rs
netflow/src/collector/: ebpf.rs  mod.rs  pcap.rs
netflow/src/tui/: app.rs  dashboard.rs  detail_modal.rs  event.rs  format.rs  help_bar.rs  list_view.rs  mod.rs  table.rs
scripts/: test-linux-ci.sh
tests/: integration_test.rs
