[package]
name = "netflow-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
netflow-common = { path = "../netflow-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "netflow"
path = "src/main.rs"
