[package]
name = "netflow"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
netflow-common = { path = "../netflow-common", features = ["userspace"] }

anyhow = { workspace = true, default-features = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "fs",
    "time",
] }
clap = { workspace = true, features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
axum = "0.7"
serde_json = "1"
hex = "0.4"
ratatui = "0.29"
crossterm = "0.28"
futures = "0.3"
async-trait = "0.1"
pcap = { version = "2", features = ["capture-stream"] }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
aya-log = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.build-dependencies]
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
netflow-ebpf = { path = "../netflow-ebpf" }

[lib]
name = "netflow"
path = "src/lib.rs"

[[bin]]
name = "netflow"
path = "src/main.rs"
